fix: dark mode chart colors

--- a/src/pages/common/BasePage.module.css
+++ b/src/pages/common/BasePage.module.css
@@ -18,7 +18,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-left: 100px;
 }
 
 .link {
